refactor(error): clean up AccessDeniedView code structure
Remove excessive comments and improve code readability in
AccessDeniedView. Add proper imports and use StandardCharsets
for better UTF-8 handling.

- Remove verbose comments and javadoc
- Import StandardCharsets for URL decoding
- Maintain existing functionality with cleaner code
- Improve overall code maintainability